--- a/components/create-bucket-job/base/create-bucket-job.yaml
+++ b/components/create-bucket-job/base/create-bucket-job.yaml
@@ -2,7 +2,6 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: create-buckets
-  namespace: summit-project 
 spec:
   selector: {}
   template:
@@ -13,22 +12,19 @@ spec:
           imagePullPolicy: IfNotPresent
           env:
             - name: AWS_S3_ENDPOINT
-              value: https://minio-api-summit-project.apps.cluster-fmslm.fmslm.sandbox2375.opentlc.com
+              value: http://minio.summit-project-user1.svc.cluster.local:9000
           command:
             - /bin/bash
             - -ec
             - |-
+              pip uninstall minio -y
+              pip install --no-cache-dir minio
               python3 /scripts/create-bucket.py
           volumeMounts:
             - name: scripts
               mountPath: /scripts
-            - name: models
-              mountPath: /models
       volumes:
         - name: scripts
           configMap:
             name: create-bucket
-        - name: models
-          configMap:
-            name: model-config-file
       restartPolicy: Never
