--- a/components/datascience-pipelines/dspa-jh.yaml
+++ b/components/datascience-pipelines/dspa-jh.yaml
@@ -2,7 +2,7 @@ apiVersion: datasciencepipelinesapplications.opendatahub.io/v1
 kind: DataSciencePipelinesApplication
 metadata:
   name: dspa
-  namespace: summit-project
+  namespace: SUMMIT_PROJECT
 spec:
   apiServer:
     artifactSignedURLExpirySeconds: 60
