--- a/components/workbenches/base/elyra-docling-wb.yaml
+++ b/components/workbenches/base/elyra-docling-wb.yaml
@@ -5,19 +5,19 @@ metadata:
     notebooks.opendatahub.io/inject-oauth: "true"
     notebooks.opendatahub.io/last-image-selection: s2i-generic-data-science-notebook:2024.2
     notebooks.opendatahub.io/last-size-selection: Small
-    notebooks.opendatahub.io/oauth-logout-url: https://rhods-dashboard-redhat-ods-applications.apps.cluster-wlbmv.wlbmv.sandbox2499.opentlc.com/projects/SUMMIT_PROJECT?notebookLogout=archie-workbench
+    notebooks.opendatahub.io/oauth-logout-url: https://rhods-dashboard-redhat-ods-applications.apps.cluster-wlbmv.wlbmv.sandbox2499.opentlc.com/projects/SUMMIT_PROJECT?notebookLogout=elyra-summit-wrkbnch
     opendatahub.io/accelerator-name: ""
     opendatahub.io/image-display-name: Standard Data Science
     opendatahub.io/username: admin
     openshift.io/description: ""
-    openshift.io/display-name: archie-workbench
+    openshift.io/display-name: elyra-summit-wrkbnch
   generation: 1
   labels:
-    app: archie-workbench
+    app: elyra-summit-wrkbnch
     opendatahub.io/dashboard: "true"
     opendatahub.io/odh-managed: "true"
     opendatahub.io/user: admin
-  name: archie-workbench
+  name: elyra-summit-wrkbnch
   namespace: SUMMIT_PROJECT
 spec:
   template:
@@ -30,37 +30,34 @@ spec:
             --ServerApp.port=8888
                               --ServerApp.token=''
                               --ServerApp.password=''
-                              --ServerApp.base_url=/notebook/SUMMIT_PROJECT/archie-workbench
+                              --ServerApp.base_url=/notebook/SUMMIT_PROJECT/elyra-summit-wrkbnch
                               --ServerApp.quit_button=False
                               --ServerApp.tornado_settings={"user":"admin","hub_host":"https://rhods-dashboard-redhat-ods-applications.apps.cluster-wlbmv.wlbmv.sandbox2499.opentlc.com","hub_prefix":"/projects/SUMMIT_PROJECT"}
         - name: JUPYTER_IMAGE
           value: image-registry.openshift-image-registry.svc:5000/redhat-ods-applications/s2i-generic-data-science-notebook:2024.2
-        - name: REQUESTS_CA_BUNDLE
-          value: /etc/pki/tls/custom-certs/ca-bundle.crt
-        - name: SSL_CERT_FILE
-          value: /etc/pki/tls/custom-certs/ca-bundle.crt
         - name: PIPELINES_SSL_SA_CERTS
           value: /etc/pki/tls/custom-certs/ca-bundle.crt
         - name: GIT_SSL_CAINFO
           value: /etc/pki/tls/custom-certs/ca-bundle.crt
         - name: PIP_CERT
           value: /etc/pki/tls/custom-certs/ca-bundle.crt
-        envFrom:
-          - configMapRef:
-              name: configmap-summit
+        - name: REQUESTS_CA_BUNDLE
+          value: /etc/pki/tls/custom-certs/ca-bundle.crt
+        - name: SSL_CERT_FILE
+          value: /etc/pki/tls/custom-certs/ca-bundle.crt
         image: image-registry.openshift-image-registry.svc:5000/redhat-ods-applications/s2i-generic-data-science-notebook:2024.2
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
           httpGet:
-            path: /notebook/SUMMIT_PROJECT/archie-workbench/api
+            path: /notebook/SUMMIT_PROJECT/elyra-summit-wrkbnch/api
             port: notebook-port
             scheme: HTTP
           initialDelaySeconds: 10
           periodSeconds: 5
           successThreshold: 1
           timeoutSeconds: 1
-        name: archie-workbench
+        name: elyra-summit-wrkbnch
         ports:
         - containerPort: 8888
           name: notebook-port
@@ -68,7 +65,7 @@ spec:
         readinessProbe:
           failureThreshold: 3
           httpGet:
-            path: /notebook/SUMMIT_PROJECT/archie-workbench/api
+            path: /notebook/SUMMIT_PROJECT/elyra-summit-wrkbnch/api
             port: notebook-port
             scheme: HTTP
           initialDelaySeconds: 10
@@ -84,7 +81,7 @@ spec:
             memory: 8Gi
         volumeMounts:
         - mountPath: /opt/app-root/src
-          name: archie-workbench
+          name: elyra-summit-wrkbnch
         - mountPath: /opt/app-root/runtimes
           name: elyra-dsp-details
         - mountPath: /dev/shm
@@ -98,7 +95,7 @@ spec:
         - --provider=openshift
         - --https-address=:8443
         - --http-address=
-        - --openshift-service-account=archie-workbench
+        - --openshift-service-account=elyra-summit-wrkbnch
         - --cookie-secret-file=/etc/oauth/config/cookie_secret
         - --cookie-expire=24h0m0s
         - --tls-cert=/etc/tls/private/tls.crt
@@ -107,8 +104,8 @@ spec:
         - --upstream-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         - --email-domain=*
         - --skip-provider-button
-        - --openshift-sar={"verb":"get","resource":"notebooks","resourceAPIGroup":"kubeflow.org","resourceName":"archie-workbench","namespace":"$(NAMESPACE)"}
-        - --logout-url=https://rhods-dashboard-redhat-ods-applications.apps.cluster-wlbmv.wlbmv.sandbox2499.opentlc.com/projects/SUMMIT_PROJECT?notebookLogout=archie-workbench
+        - --openshift-sar={"verb":"get","resource":"notebooks","resourceAPIGroup":"kubeflow.org","resourceName":"elyra-summit-wrkbnch","namespace":"$(NAMESPACE)"}
+        - --logout-url=https://rhods-dashboard-redhat-ods-applications.apps.cluster-wlbmv.wlbmv.sandbox2499.opentlc.com/projects/SUMMIT_PROJECT?notebookLogout=elyra-summit-wrkbnch
         env:
         - name: NAMESPACE
           valueFrom:
@@ -154,11 +151,11 @@ spec:
         - mountPath: /etc/tls/private
           name: tls-certificates
       enableServiceLinks: false
-      serviceAccountName: archie-workbench
+      serviceAccountName: elyra-summit-wrkbnch
       volumes:
-      - name: archie-workbench
+      - name: elyra-summit-wrkbnch
         persistentVolumeClaim:
-          claimName: archie-workbench
+          claimName: elyra-summit-wrkbnch
       - name: elyra-dsp-details
         secret:
           secretName: ds-pipeline-config
@@ -175,8 +172,8 @@ spec:
       - name: oauth-config
         secret:
           defaultMode: 420
-          secretName: archie-workbench-oauth-config
+          secretName: elyra-summit-wrkbnch-oauth-config
       - name: tls-certificates
         secret:
           defaultMode: 420
-          secretName: archie-workbench-tls
+          secretName: elyra-summit-wrkbnch-tls
