--- a/components/workbenches/base/elyra-docling-workbench-template.yaml
+++ b/components/workbenches/base/elyra-docling-workbench-template.yaml
@@ -5,20 +5,18 @@ metadata:
     notebooks.opendatahub.io/inject-oauth: "true"
     notebooks.opendatahub.io/last-image-selection: s2i-generic-data-science-notebook:2024.2
     notebooks.opendatahub.io/last-size-selection: Small
-    notebooks.opendatahub.io/oauth-logout-url: https://rhods-dashboard-redhat-ods-applications.apps.cluster-wlbmv.wlbmv.sandbox2499.opentlc.com/projects/SUMMIT_PROJECT?notebookLogout=archie-workbench
+    notebooks.opendatahub.io/oauth-logout-url: https://${RHOAI_DASHBOARD}/projects/${SUMMIT_PROJECT}?notebookLogout=summit-workbench
     opendatahub.io/accelerator-name: ""
     opendatahub.io/image-display-name: Standard Data Science
     opendatahub.io/username: admin
     openshift.io/description: ""
-    openshift.io/display-name: archie-workbench
-  generation: 1
+    openshift.io/display-name: summit-workbench
   labels:
-    app: archie-workbench
+    app: summit-workbench
     opendatahub.io/dashboard: "true"
     opendatahub.io/odh-managed: "true"
     opendatahub.io/user: admin
-  name: archie-workbench
-  namespace: SUMMIT_PROJECT
+  name: summit-workbench
 spec:
   template:
     spec:
@@ -30,9 +28,9 @@ spec:
             --ServerApp.port=8888
                               --ServerApp.token=''
                               --ServerApp.password=''
-                              --ServerApp.base_url=/notebook/SUMMIT_PROJECT/archie-workbench
+                              --ServerApp.base_url=/notebook/${SUMMIT_PROJECT}/summit-workbench
                               --ServerApp.quit_button=False
-                              --ServerApp.tornado_settings={"user":"admin","hub_host":"https://rhods-dashboard-redhat-ods-applications.apps.cluster-wlbmv.wlbmv.sandbox2499.opentlc.com","hub_prefix":"/projects/SUMMIT_PROJECT"}
+                              --ServerApp.tornado_settings={"user":"admin","hub_host":"https://${RHOAI_DASHBOARD}/","hub_prefix":"/projects/${SUMMIT_PROJECT}"}
         - name: JUPYTER_IMAGE
           value: image-registry.openshift-image-registry.svc:5000/redhat-ods-applications/s2i-generic-data-science-notebook:2024.2
         - name: REQUESTS_CA_BUNDLE
@@ -53,14 +51,14 @@ spec:
         livenessProbe:
           failureThreshold: 3
           httpGet:
-            path: /notebook/SUMMIT_PROJECT/archie-workbench/api
+            path: /notebook/${SUMMIT_PROJECT}/summit-workbench/api
             port: notebook-port
             scheme: HTTP
           initialDelaySeconds: 10
           periodSeconds: 5
           successThreshold: 1
           timeoutSeconds: 1
-        name: archie-workbench
+        name: summit-workbench
         ports:
         - containerPort: 8888
           name: notebook-port
@@ -68,7 +66,7 @@ spec:
         readinessProbe:
           failureThreshold: 3
           httpGet:
-            path: /notebook/SUMMIT_PROJECT/archie-workbench/api
+            path: /notebook/${SUMMIT_PROJECT}/summit-workbench/api
             port: notebook-port
             scheme: HTTP
           initialDelaySeconds: 10
@@ -84,7 +82,7 @@ spec:
             memory: 8Gi
         volumeMounts:
         - mountPath: /opt/app-root/src
-          name: archie-workbench
+          name: summit-workbench
         - mountPath: /opt/app-root/runtimes
           name: elyra-dsp-details
         - mountPath: /dev/shm
@@ -98,7 +96,7 @@ spec:
         - --provider=openshift
         - --https-address=:8443
         - --http-address=
-        - --openshift-service-account=archie-workbench
+        - --openshift-service-account=summit-workbench
         - --cookie-secret-file=/etc/oauth/config/cookie_secret
         - --cookie-expire=24h0m0s
         - --tls-cert=/etc/tls/private/tls.crt
@@ -107,8 +105,8 @@ spec:
         - --upstream-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         - --email-domain=*
         - --skip-provider-button
-        - --openshift-sar={"verb":"get","resource":"notebooks","resourceAPIGroup":"kubeflow.org","resourceName":"archie-workbench","namespace":"$(NAMESPACE)"}
-        - --logout-url=https://rhods-dashboard-redhat-ods-applications.apps.cluster-wlbmv.wlbmv.sandbox2499.opentlc.com/projects/SUMMIT_PROJECT?notebookLogout=archie-workbench
+        - --openshift-sar={"verb":"get","resource":"notebooks","resourceAPIGroup":"kubeflow.org","resourceName":"summit-workbench","namespace":"$(NAMESPACE)"}
+        - --logout-url=https://${RHOAI_DASHBOARD}/projects/${SUMMIT_PROJECT}?notebookLogout=summit-workbench
         env:
         - name: NAMESPACE
           valueFrom:
@@ -154,11 +152,11 @@ spec:
         - mountPath: /etc/tls/private
           name: tls-certificates
       enableServiceLinks: false
-      serviceAccountName: archie-workbench
+      serviceAccountName: summit-workbench
       volumes:
-      - name: archie-workbench
+      - name: summit-workbench
         persistentVolumeClaim:
-          claimName: archie-workbench
+          claimName: summit-workbench
       - name: elyra-dsp-details
         secret:
           secretName: ds-pipeline-config
@@ -175,8 +173,8 @@ spec:
       - name: oauth-config
         secret:
           defaultMode: 420
-          secretName: archie-workbench-oauth-config
+          secretName: summit-workbench-oauth-config
       - name: tls-certificates
         secret:
           defaultMode: 420
-          secretName: archie-workbench-tls
+          secretName: summit-workbench-tls
