--- a/components/workbenches/base/namespace.yaml
+++ b/components/workbenches/base/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: summit-project
+  name: SUMMIT_PROJECT
   annotations:
     openshift.io/node-selector: ""
   labels:
