--- a/components/datascience-pipelines/secret-dashboard-dspa-secret.yaml
+++ b/components/datascience-pipelines/secret-dashboard-dspa-secret.yaml
@@ -1,7 +1,7 @@
 ﻿kind: Secret
 apiVersion: v1
 metadata:
-  name: dashboard-dspa-secret
+  name: ds-pipeline-config
   labels:
     opendatahub.io/dashboard: 'true'
 data:
