--- a/components/datascience-pipelines/secret-dashboard-dspa-secret-template.yaml
+++ b/components/datascience-pipelines/secret-dashboard-dspa-secret-template.yaml
@@ -1,7 +1,7 @@
 ﻿kind: Secret
 apiVersion: v1
 metadata:
-  name: minioconnection
+  name: ds-pipeline-config
 stringData:
   AWS_ACCESS_KEY_ID: minio
   AWS_DEFAULT_REGION: 'us-east-1'
