--- a/components/model-server/sa-secret-token.yaml
+++ b/components/model-server/sa-secret-token.yaml
@@ -3,11 +3,32 @@ kind: ServiceAccount
 metadata:
   name: granite2b-sa
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: inference-service-reader
+rules:
+- apiGroups: ["serving.kserve.io"]
+  resources: ["inferenceservices"]
+  verbs: ["get", "list", "watch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: granite2b-sa-inference-service-reader-binding
+subjects:
+- kind: ServiceAccount
+  name: granite2b-sa
+  namespace: granite-model-project
+roleRef:
+  kind: Role
+  name: inference-service-reader
+  apiGroup: rbac.authorization.k8s.io
+---
 kind: Secret
 apiVersion: v1
 metadata:
   name: default-name-granite2b-sa
-  namespace: granite-model-project
   labels:
     opendatahub.io/dashboard: 'true'
   annotations:
